<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="action_save">Done</string>
  <string name="action_discard">Cancel</string>
</resources>
