<?xml version="1.0" encoding="utf-8"?>
<EditText xmlns:android="http://schemas.android.com/apk/res/android"
	  android:id="@+id/editor"
	  android:gravity="top"
	  android:layout_height="match_parent"
	  android:layout_width="match_parent" />
