<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:yama="http://schemas.android.com/apk/res-auto">
  <item android:id="@+id/new_memo_btn"
        android:title="create"
        yama:showAsAction="always"/>
</menu>
