<?xml version="1.0" encoding="utf-8"?>
<ListView xmlns:android="http://schemas.android.com/apk/res/android"
	  android:id="@+id/memo_list"
	  android:divider="@null"
	  android:descendantFocusability="beforeDescendants"
	  android:layout_height="match_parent"
	  android:layout_width="match_parent" />
